position tag img

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <div class="card" style="width: 14rem;">
                         <img src="https://gallery.yopriceville.com/var/albums/Backgrounds/Sea_Beach_Background.jpg?m=1629742867"
                             class="card-img-top position-relative" alt="beach">
-                        <span class="position-absolute top-0 end-0 badge rounded-pill bg-danger">
+                        <span class="position-absolute top-0 end-0 m-2 badge rounded-pill bg-danger">
                             HOT
                             <span class="visually-hidden">unread messages</span>
                         </span>
